--- a/package.json
+++ b/package.json
@@ -1,28 +1,34 @@
 {
-  "name": "storeapi",
+  "name": "06-jobs-api",
   "version": "1.0.0",
-  "description": "Store API backend project mainly to learn sorting and querying using mongo and express",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+ssh://git@github.com/Seifeldin-Sabry/StoreApi.git"
-  },
-  "author": "Seifeldin Sabry",
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Seifeldin-Sabry/StoreApi/issues"
-  },
-  "homepage": "https://github.com/Seifeldin-Sabry/StoreApi#readme",
   "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "express-rate-limit": "^5.3.0",
+    "helmet": "^4.6.0",
+    "http-status-codes": "^2.1.4",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.2",
+    "passport": "^0.6.0",
+    "rate-limiter": "^0.2.0",
+    "swagger-ui-express": "^4.1.6",
+    "validator": "^13.7.0",
+    "xss-clean": "^0.1.1",
+    "yamljs": "^0.3.0"
+  },
+  "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.9"
   }
 }
